--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>LWS | TASK MANAGER</title>
+    <title>LWS | LEARNING PROTAL</title>
     
   </head>
   <body>
